--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.h2.console.path=/h2
 spring.datasource.url=jdbc:h2:mem:SimpleCalculatorDB
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=sa
+spring.datasource.password=
 
-spring.jpa.properties.ddl-auto=create
+spring.jpa.properties.ddl-auto=update
